# AI-PR-Review

./: DESIGN.md  DESIGN_RATIONALE.md  README.md
ai-pr-reviewer/: DESIGN.md  DESIGN_RATIONALE.md  README.md  pyproject.toml  setup.py
ai-pr-reviewer/examples/: report_sample.json  report_sample.md
ai-pr-reviewer/src/: cli.py  cli_utils.py  config.py
ai-pr-reviewer/src/ai_pr_reviewer.egg-info/: PKG-INFO
ai-pr-reviewer/src/context/: __init__.py  ast_walker.py  builder.py  ignore.py
ai-pr-reviewer/src/diff/: models.py  parser.py
ai-pr-reviewer/src/github_client/: __init__.py  auth.py  fetcher.py
ai-pr-reviewer/src/llm/: analyzer.py  prompts.py  token_counter.py
ai-pr-reviewer/src/llm/providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
ai-pr-reviewer/src/report/: __init__.py  generator.py  templates.py
ai-pr-reviewer/tests/: conftest.py  test_analyzer.py  test_config.py  test_github_fetcher.py  test_prompts.py  test_report_generator.py
ai-pr-reviewer/tests/fixtures/: sample_diff_multifile.txt
examples/: report_sample.md
src/: __init__.py  cli.py  cli_utils.py  config.py
src/ai_pr_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/context/: ast_walker.py  builder.py  ignore.py
src/diff/: __init__.py  models.py  parser.py
src/github_client/: auth.py  fetcher.py
src/llm/: __init__.py  analyzer.py  prompts.py  token_counter.py
src/llm/providers/: anthropic_provider.py  base.py  local_provider.py  openai_provider.py
src/report/: generator.py  templates.py
tests/: test_ast_walker.py  test_diff_parser.py  test_ignore.py  test_report_generator.py  test_token_counter.py
tests/fixtures/: sample_diff_security.txt  sample_diff_simple.txt
