[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pr-reviewer"
version = "0.1.0"
description = "AI-driven PR Review assistant — automated diff analysis with LLM-powered code review"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["code-review", "github", "ai", "llm", "pr-reviewer"]

authors = [
    {name = "AI-PR-Reviewer Team"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Reviews",
]

dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "PyGithub>=2.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "unidiff>=0.7",
    "pyyaml>=6.0",
    "tree-sitter>=0.22",
    "anthropic>=0.30",
    "openai>=1.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "mypy>=1.0",
    "ruff>=0.3",
    "pre-commit>=3.0",
]

[project.scripts]
ai-pr-reviewer = "src.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
